Adjustance to Password Hash