@@ -21,7 +21,12 @@ java {
     targetCompatibility = JavaVersion.VERSION_21
 
 }
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--enable-preview")
+}
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("--enable-preview")
 }
+
